[project]
name = "documentation-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.1.3",
    "langchain-classic>=1.0.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.14",
    "python-dotenv>=1.2.1",
]
